force-app/main/default/objects/S_D_Parameter__c/S_D_Parameter__c.object-meta.xml
<CustomObject>
    <label>S &amp; D Parameter</label>
    <nameField>
        <label>S_D_Parameter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S &amp; D Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>