force-app/main/default/objects/S_D_Parameter__c/fields/Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Date_Field__c</fullName>
    <inlineHelpText>Date/DateTime field used to scope the incentive period (between start and end). May be a parent field, e.g. Order__r.Order_Date__c.</inlineHelpText>
    <label>Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>