force-app/main/default/objects/S_D_Parameter__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Stable key (Sales Channel | Name) used to match this parameter when importing PBIS Targets via the Data Import Wizard. Set automatically on save.</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>