force-app/main/default/objects/S_D_Parameter__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <inlineHelpText>Field on the selected object to aggregate for SUM. Not used for Focus-Pack operators.</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>