force-app/main/default/objects/S_D_Parameter__c/fields/Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>Filter_Logic__c</fullName>
    <label>Filter Logic</label>
    <type>TextArea</type>
</CustomField>