force-app/main/default/objects/S_D_Parameter__c/fields/Filters__c.field-meta.xml
<CustomField>
    <fullName>Filters__c</fullName>
    <inlineHelpText>JSON array of filter rows ({field, operator, value}) applied to the source object. Built in the S&amp;D Parameter setup screen.</inlineHelpText>
    <label>Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>