force-app/main/default/objects/S_D_Parameter__c/fields/Focused_Pack__c.field-meta.xml
<CustomField>
    <fullName>Focused_Pack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Focused Pack measured by this parameter. Required for FOCUS_PACK_VOLUME / FOCUS_PACK_REVENUE operators; its SKUs are defined by Focused Pack Items.</inlineHelpText>
    <label>Focused Pack</label>
    <referenceTo>Focused_Pack__c</referenceTo>
    <relationshipLabel>S&amp;D Parameters</relationshipLabel>
    <relationshipName>SD_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>