force-app/main/default/objects/S_D_Parameter__c/fields/Is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark the value/volume gate parameter as mandatory. A PBIS Target must include at least one mandatory parameter.</inlineHelpText>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>