force-app/main/default/objects/S_D_Parameter__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <inlineHelpText>API name of the source object the achievement is computed from (e.g. Invoice_item__c). Chosen from the searchable object list.</inlineHelpText>
    <label>Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>