force-app/main/default/objects/S_D_Parameter__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUM</fullName>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>FOCUS_PACK_VOLUME</fullName>
            </value>
            <value>
                <fullName>FOCUS_PACK_REVENUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>