force-app/main/default/objects/S_D_Parameter__c/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <inlineHelpText>Sales channel this parameter applies to. Scopes the Focused Pack selection by channel.</inlineHelpText>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Chanel</valueSetName>
    </valueSet>
</CustomField>