force-app/main/default/objects/S_D_Parameter__c/fields/SKU_Field__c.field-meta.xml
<CustomField>
    <fullName>SKU_Field__c</fullName>
    <inlineHelpText>For Focus Pack operators: the product/SKU lookup field on the source object that is matched against the Focused Pack's items (Focused_Pack_Item__c.SKU__c), e.g. Product__c on Invoice_item__c.</inlineHelpText>
    <label>SKU Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>