force-app/main/default/objects/S_D_Parameter__c/fields/SOQL_Query__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Query__c</fullName>
    <inlineHelpText>The aggregate SOQL generated from this parameter's configuration. Used by the achievement calculation. Generated on save.</inlineHelpText>
    <label>SOQL Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>