force-app/main/default/objects/S_D_Parameter__c/fields/Source_Config__c.field-meta.xml
<CustomField>
    <fullName>Source_Config__c</fullName>
    <description>JSON for the MULTI_OBJECT_DISTINCT operator: {"sources":[{object, customerField, userField, dateField, filters, filterLogic, soql}]}. Each source's generated `soql` is run by PBISActuals_Service and the distinct customers are unioned per user.</description>
    <inlineHelpText>Configured automatically by the S&amp;D Parameter builder for the Unique Customers (multi-object) operator.</inlineHelpText>
    <label>Source Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>