force-app/main/default/objects/S_D_Parameter__c/fields/User_Field__c.field-meta.xml
<CustomField>
    <fullName>User_Field__c</fullName>
    <inlineHelpText>The field on the selected object that identifies the salesperson (e.g. CreatedById, OwnerId).</inlineHelpText>
    <label>User Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>