force-app/main/default/objects/S_D_Parameter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Operator__c</columns>
    <columns>Sales_Channel__c</columns>
    <columns>Object__c</columns>
    <columns>Field__c</columns>
    <columns>Focused_Pack__c</columns>
    <columns>User_Field__c</columns>
    <columns>Is_Active__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>